# gmath

./: CMakeLists.txt  LICENSE  README.md  run.bat
src/: gmath.h  main.cpp
src/Algebra/: Algebra.cpp  Algebra.h
src/Arithmetic/: Arithmetic.cpp  Arithmetic.h
src/Constants/: Constants.h
